--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<h1>hello world</h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport", content="width=device-width, initial-scale=1.0">
+        <title>Flappy Bert</title>
+        <link rel="stylesheet" href="flappybert.css">
+        <script src="flappybert.js"></script>
+    </head>
+    <body>
+        <canvas id="board"></canvas>
+    </body>
+</html>
